<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('commission_agents', function (Blueprint $table) {
            $table->id();
            $table->foreignId('visa_agent_id')
                ->constrained('visa_agents')
                ->restrictOnDelete()
                ->onUpdate('cascade');
            $table->string('name');
            $table->string('address');
            $table->string('contacts');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::table('commission_agents', function (Blueprint $table) {
            $table->dropForeign(['visa_agent_id']);
        });

        Schema::dropIfExists('commission_agents');
    }
};
