erDiagram
    %% Visa — generated by php artisan erd:generate

    visa_agents {
        bigint id PK
        string name
        string address
        string contacts
        timestamp created_at
        timestamp updated_at
    }

    visa_agent_costs {
        bigint id PK
        bigint visa_agent_id FK
        bigint user_id FK
        decimal visa_agent_cost
        timestamp created_at
        timestamp updated_at
    }

    visa_selling_prices {
        bigint id PK
        decimal selling_price
        bigint user_id FK
        timestamp created_at
        timestamp updated_at
    }

    commission_agents {
        bigint id PK
        bigint visa_agent_id FK
        string name
        string address
        string contacts
        timestamp created_at
        timestamp updated_at
    }

    visa_submissions {
        bigint id PK
        bigint passenger_id FK
        bigint visa_agent_id FK
        bigint commission_agent_id FK
        decimal agent_commission
        decimal net_visa_cost
        decimal additional_cost
        decimal final_cost
        string remarks
        bigint visa_selling_price_id FK
        string visa_number
        int is_cancelled
        string status
        timestamp created_at
        timestamp updated_at
    }

    cancelled_submissions {
        bigint id PK
        bigint visa_submission_id FK
        decimal cancellation_fee
        timestamp created_at
        timestamp updated_at
        bigint visa_agent_id FK
    }

    visa_update_logs {
        bigint id PK
        bigint visa_submission_id FK
        bigint user_id FK
        string action
        string old_values
        string new_values
        timestamp created_at
    }

    %% Relationships
    commission_agents ||--o{ visa_submissions : commission_agent_id
    visa_agents ||--o{ cancelled_submissions : visa_agent_id
    visa_agents ||--o{ visa_submissions : visa_agent_id
    visa_agents ||--|{ commission_agents : visa_agent_id
    visa_agents ||--|{ visa_agent_costs : visa_agent_id
    visa_selling_prices ||--|{ visa_submissions : visa_selling_price_id
    visa_submissions ||--|{ cancelled_submissions : visa_submission_id
    visa_submissions ||--|{ visa_update_logs : visa_submission_id

